samples/_failures_safe/1761559894_a696d6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7146df04.c: In function ‘main’:
./samples/SAFE/__tmp_7146df04.c:154:5: error: expected declaration or statement at end of input
  154 |     }
      |     ^
